unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/litify_pm__Referral_Transaction__c.object-meta.xml
<CustomObject>
    <label>Referral Transaction</label>
    <nameField>
        <displayFormat>RTX-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Referral Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>