unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Agreement_Name__c</fullName>
    <label>Agreement Name (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>