unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Assigned_to_firm_date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Assigned_to_firm_date__c</fullName>
    <label>LRN Referred to firm at</label>
    <type>DateTime</type>
</CustomField>