unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Attempt__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Attempt__c</fullName>
    <description>Shows how many attempts were made to send this referral to other firms.</description>
    <inlineHelpText>Shows how many attempts were made to send this referral to other firms.</inlineHelpText>
    <label>Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>