unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Case_closed_at__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_closed_at__c</fullName>
    <label>Case closed at</label>
    <type>DateTime</type>
</CustomField>