unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Case_turn_down_reason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_turn_down_reason__c</fullName>
    <label>Case turn down reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>