unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__CaseTurnDownReason2__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__CaseTurnDownReason2__c</fullName>
    <description>This custom field was created to use instead of Case_turn_down_reason which only supports 255 character long case turn down reasons.</description>
    <label>Case turn down reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>