unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Handling_firm__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Handling_firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handling firm</label>
    <referenceTo>litify_pm__Firm__c</referenceTo>
    <relationshipLabel>Referral Transactions</relationshipLabel>
    <relationshipName>Referral_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>