unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Investigated_At__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Investigated_At__c</fullName>
    <description>This field maps attorney_interested_at field from API</description>
    <inlineHelpText>This field maps a field from LRN API</inlineHelpText>
    <label>LRN Investigated At</label>
    <type>DateTime</type>
</CustomField>