unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Referral__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Referral__c</fullName>
    <label>Referral</label>
    <referenceTo>litify_pm__Referral__c</referenceTo>
    <relationshipLabel>Referral Transactions</relationshipLabel>
    <relationshipName>Referral_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>