unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Signed_Up_At__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Signed_Up_At__c</fullName>
    <description>This field maps signed_up_at field from API</description>
    <inlineHelpText>This field maps a field from LRN API</inlineHelpText>
    <label>LRN Signed Up At</label>
    <type>DateTime</type>
</CustomField>