unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>