unpackaged/main/default/objects/litify_pm__Referral_Transaction__c/fields/litify_pm__Suggested_fee__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Suggested_fee__c</fullName>
    <label>Suggested fee (deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>